--- a/client/src/main/resources/application.yml
+++ b/client/src/main/resources/application.yml
@@ -10,13 +10,6 @@ endpoints:
     sensitive: false
 
 eureka:
-  instance:
-    leaseRenewalIntervalInSeconds: 10
-    metadataMap:
-      instanceId: ${vcap.application.instance_id:${spring.application.name}:${spring.application.instance_id:${server.port}}}
   client:
-    registryFetchIntervalSeconds: 5
-
-logging:
-  level:
-    com.netflix.discovery: 'OFF'
+    serviceUrl:
+      defaultZone: http://unisthdw003:8761/eureka
