--- a/client/src/main/resources/bootstrap.yml
+++ b/client/src/main/resources/bootstrap.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: stores
+    name: new_service
   cloud:
     config:
-      uri: ${vcap.services.${PREFIX:}configserver.credentials.uri:http://localhost:8888}
+      uri: http://unisthdw003:8888
