Starting to understand how the config service is working so the applications connecting to the config service fetches its properties from the config service.

--- a/configuration-service/src/main/resources/bootstrap.yml
+++ b/configuration-service/src/main/resources/bootstrap.yml
@@ -8,6 +8,6 @@ spring:
       enabled: false
       server:
         native:
-          searchLocations: C:\devel\Code\Test\spring-cloud\configuration-service\src\main\resources\
+          searchLocations: C:\devel\Code\Test\spring-cloud\configuration-service\src\main\resources\config
 encrypt:
   failOnError: false
