Adding service provider and modifying configuration server to use config from github repository

--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
         <module>configuration-service</module>
         <module>discovery-service</module>
         <module>client</module>
+        <module>service-provider</module>
         <!--<module>spring-boot</module>-->
     </modules>
 
