--- a/configuration-service/src/main/resources/bootstrap.yml
+++ b/configuration-service/src/main/resources/bootstrap.yml
@@ -7,7 +7,7 @@ spring:
     config:
       enabled: false
       server:
-        git:
-           uri: https://github.com/unibetjavaacademy/spring-cloud/blob/master/configuration-service/src/main/resources/config
+        native:
+          searchLocations: C:\devel\Code\Test\spring-cloud\configuration-service\src\main\resources\config
 encrypt:
   failOnError: false
