--- a/service-consumer/src/main/resources/bootstrap.yml
+++ b/service-consumer/src/main/resources/bootstrap.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: service-provider
+    name: service-consumer
   cloud:
     config:
       uri: http://${config.host:localhost}:${config.port:8888}
